--- a/homework-06/style/header.css
+++ b/homework-06/style/header.css
@@ -11,6 +11,7 @@ a{
     font-size: 14px;
     color:#95e1d3;
     text-transform: uppercase;
+    position: relative;
 }
 .menu-Item-Link:hover{
     transition-property: color;
@@ -21,6 +22,7 @@ a{
 
 .menu-Item:hover .menu-Item-Link{
     color: #f38181;
+    top: 8px
 }
 
 
@@ -33,6 +35,10 @@ a{
     background-color: #f38181;
     margin-top: 13px;
     height: 3px;
+    width: inherit;
+}
+
+.menu-item-wrap{
     width: 100%;
 }
 .menu{
