--- a/homework-08/styles/general.css
+++ b/homework-08/styles/general.css
@@ -10,21 +10,19 @@ a{
     text-decoration: none;
 }
 .wrapper{
-    min-width: 90rem;
+    min-width: 20rem;
 }
 .wrapper-team{
-    width: 58rem;
+    width: 14rem;
     margin: auto;
 }
 .container-main-information{
-    width: 100vw;
     background-image: url("../img/banner.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     padding-top: 2rem;
-    padding-left: 5.125rem;
-
+    height: 100vh;
 }
 img{
     display: block;
