--- a/homework-08/styles/header.css
+++ b/homework-08/styles/header.css
@@ -20,6 +20,9 @@
     color: #ffffff;
     cursor: pointer;
     padding: 0.5rem;
+    border: 2px solid;
+    border-radius: 15px;
+    border-color: transparent;
 }
 .logo{
     width: 11.75rem;
