--- a/homework-09/styles/main.css
+++ b/homework-09/styles/main.css
@@ -1,1 +1,6 @@
+@import "bootstrap.min.css";
 @import "fonts.css";
+@import "general.css";
+@import "media.css";
+@import "header.css";
+@import "team.css";
