--- a/homework-09/styles/header.css
+++ b/homework-09/styles/header.css
@@ -2,16 +2,16 @@
     display: flex;
     flex-basis: 20rem;
     margin-bottom: 2.357rem;
-    margin-top: 2rem;
     flex-direction: column-reverse;
     padding-left: 0;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 .menu{
     display: flex;
     flex-direction: row;
-    padding-bottom: 8rem;
+    padding-bottom: 2rem;
+    justify-content: center;
 }
 .menu-Item-Link {
     font-family: 'Montserrat', sans-serif;
@@ -24,30 +24,47 @@
     border-radius: 15px;
     border-color: transparent;
 }
+
+.menu-Item-Link.signup{
+    border: 2px solid;
+    border-radius: 15px;
+    border-color: #ffffff;
+}
+
 .logo{
+    display: block;
+    margin: auto;
     width: 11.75rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 1.25rem;
     color: #ffffff;
-    text-align: center;
+    padding-top: 4rem;
+
 }
 .site-title{
-    margin-bottom: 2.5rem;
+    padding-top: 3rem;
+    margin-bottom: 0.8rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 2rem;
     color: #ffffff;
     text-align: center;
-    line-height: 3rem;
+    line-height: 2rem;
     text-transform: uppercase;
 }
+.site-title-container{
+    padding: 0;
+}
+
 .site-subtitle {
-    margin-bottom: 2.1875rem;
     font-family: 'Roboto Light', sans-serif;
     color: #ffffff;
     font-size: 1.5rem;
     text-align: center;
+    width: 90%;
+   margin-right: auto;
+    margin-left: auto;
 }
 .btn{
     display: block;
@@ -63,7 +80,3 @@
     font-size: 0.875rem;
     cursor: pointer;
 }
-.justify-content-center{
-    justify-content: center;
-}
-
