--- a/homework-09/styles/media.css
+++ b/homework-09/styles/media.css
@@ -1,17 +1,19 @@
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 992px) {
     .container, .container-fluid{
-       max-width: 720px;
-        margin: auto;
     }
 
     .header {
-        min-width: 47rem;
-        max-width: 59rem;
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         justify-content: space-around;
         margin-bottom: 6rem;
         margin-top: 1.7rem;
+    }
+
+    .logo{
+        padding-top: 0;
+        margin: 0;
     }
 
     .menu {
@@ -22,30 +24,66 @@
         padding-bottom: 0;
     }
 
+    .menu-container{
+        flex-wrap: nowrap;
+    }
+
     .team-part {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
     }
+    .site-title {
+        font-size: 3.23rem;
+        line-height: 1.3;
+        padding-bottom: 2rem;
+    }
 
-    .team-item {
-        width: 20rem;
+    .site-title-container{
+        padding-top: 3rem;
+    }
+
+    .site-subtitle{
+        padding-bottom: 2rem;
+    }
+
+    .middle-container{
+        margin-top: 20%;
+    }
+
+    .team-item{
+        width: 14rem;
+    }
+
+    .team-items-container{
+        margin: auto;
+    }
+
+    .btn-team{
+        width: 100%;
+        margin-top: 2rem;
     }
 }
 
 @media (min-width: 992px) {
     .container,  .container-fluid {
-        max-width: 960px;
         margin: auto;
+        width: auto;
+    }
+
+    .logo {
+        margin: 0;
+        padding: 0;
     }
 
     .header {
         width: auto;
+        height: 80%;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+        align-items: normal;
         margin-bottom: 10rem;
-        margin-top: 1.7rem;
     }
 
     .menu {
@@ -56,12 +94,17 @@
         padding-bottom: 0;
     }
 
+    .menu-Item-Link.signup{
+        border: none;
+    }
+
     .menu-Item-Link:hover {
         transition-property: color, border-bottom-color;
         transition-duration: 200ms;
         transition-timing-function: linear;
         border: 2px solid #ffffff;
         border-radius: 15px;
+        color: white;
     }
 
     .team-part {
@@ -83,8 +126,18 @@
 
     .site-title {
         font-size: 3.23rem;
-        line-height: 3;
+        line-height: 1.3;
+        padding-top: 0px;
     }
+
+    .btn{
+        margin-top: 2rem;
+    }
+
+    .btn-team{
+        margin-top: 2rem;
+    }
+
     .btn:hover, .btn-team:hover{
         transition-property: color, border-bottom-color;
         transition-duration: 200ms;
