--- a/homework-09/styles/general.css
+++ b/homework-09/styles/general.css
@@ -14,6 +14,7 @@ ul {
 }
 a{
     text-decoration: none;
+    background-color: transparent;
     color: #ffffff;
 }
 .wrapper{
@@ -29,7 +30,7 @@ a{
     background-repeat: no-repeat;
     background-position: center;
     padding-top: 2rem;
-    height: 100vh;
+    min-height: 43.75rem;
     width: 100vw;
 }
 .row{
