--- a/homework-10/styles/main.css
+++ b/homework-10/styles/main.css
@@ -1,3 +1,7 @@
 @import "normalize.css";
+@import "media.css";
 @import "general.css";
 @import "header.css";
+@import "services.css";
+@import "team.css";
+@import "footer.css";
